--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Matheus's Recipes</title>
 </head>
 
 <body>
-    <h1>Odin Recipes</h1>    
+    <h1>Matheus's Recipes</h1>    
     <a href="./recipes/barbecue.html">Barbecue</a>
 </body>
 
