Add: ul and buttons to 'barbecue.html footer, img to index.html

--- a/index.html
+++ b/index.html
@@ -11,7 +11,12 @@
 
 <body>
     <h1>Matheus's Recipes</h1>    
-    <a href="./recipes/barbecue.html">Barbecue</a>
+    <a href="./recipes/barbecue.html">
+        <div>
+            <label for="BBQ-icon">Barbecue</label>
+            <img id="BBQ-icon" src="./images/Barbecue-Grill.svg" alt="A barbecue grill">
+        </div>
+    </a>
 </body>
 
 </html>
