--- a/recipes/barbecue.html
+++ b/recipes/barbecue.html
@@ -32,9 +32,10 @@
     <p>Enjoy your simple and tasty Brazilian barbecue! You can serve it with sides like rice, beans, french fries and salad.</p>
 
     <footer>
-        <a href="#page-title">Return to top</a>
-        <br>
-        <a href="../index.html">Return to main page</a>
+        <ul>
+            <li><a href="#page-title"><button>Return to top</button></a></li>
+            <li><a href="../index.html"><button>Return to main page</button></a></li>
+        </ul>
     </footer>
 
 </body>
