index.html: ordered list with hamburger.html added

--- a/index.html
+++ b/index.html
@@ -11,12 +11,20 @@
 
 <body>
     <h1>Matheus's Recipes</h1>    
-    <a href="./recipes/barbecue.html">
+    <!--
+        div with photo, to be added just with css
+
+        <a href="./recipes/barbecue.html">
         <div>
             <label for="BBQ-icon">Barbecue</label>
             <img id="BBQ-icon" src="./images/Barbecue-Grill.svg" alt="A barbecue grill">
         </div>
     </a>
+    -->
+    <ol>
+        <li><a href="./recipes/barbecue.html"><button>Barbecue</button></a></li>
+        <li><a href="./recipes/hambuger.html"><button>hamburger</button></a></li>
+    </ol>
 </body>
 
 </html>
